--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,15 @@
 {
-  "name": "Something",
-  "version": "1.0",
   "manifest_version": 2,
-  "description": "Woohoo",
+  "name": "Text Converter",
+  "description": "Converts text to uppercase",
+  "version": "1.0",
   "browser_action": {
-    "default_icon": "icon.png"
-  },
-  "background": {
-    "persistent": false,
-    "scripts": ["background.js"]
+    "default_icon": "icon.png",
+    "default_popup": "popup.html"
   },
   "permissions": [
-    "tabs",
     "activeTab",
-    "downloads"
-  ],
-  "content_scripts" : [{
-    "matches": ["<all_urls>"],
-    "js" : ["content.js"]
-  }]
+    "tabs",
+    "scripting"
+  ]
 }
