--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Text Converter",
   "description": "Converts text to uppercase",
-  "version": "1.0",
-  "browser_action": {
+  "version": "2.0",
+  "action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
@@ -11,5 +11,9 @@
     "activeTab",
     "tabs",
     "scripting"
-  ]
+  ],
+  "background": {
+    "service_worker": "background.js",
+    "type": "module"
+  }
 }
