--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,9 @@
   "manifest_version": 3,
   "name": "Text Converter",
   "description": "Converts text to uppercase",
-  "version": "2.2",
+  "version": "2.2.0",
   "action": {
-    "default_icon": "icon.png",
+    "default_icon": "./assets/icon.png",
     "default_popup": "popup.html"
   },
   "permissions": [
