--- a/manifest.json
+++ b/manifest.json
@@ -4,11 +4,11 @@
   "description": "This Chrome extension allows you to easily calculate the time complexity of a function. This tool is useful for software developers looking to optimize their code and improve its performance. With this extension, you can quickly and easily determine the efficiency of your functions and make informed decisions about how to optimize them.",
   "version": "2.2.1",
   "action": {
-    "default_icon": "128.png",
-    "default_popup": "popup.html"
+    "default_icon": "assets/icon.png",
+    "default_popup": "popup/popup.html"
   },
   "icons": {
-    "128": "128.png"
+    "128": "assets/icon.png"
   },
   "permissions": [
     "activeTab",
